<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">酒快到</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">no</string>
    <string name="change_location_textview">点击定位在当前位置</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="main_left_exit_user">退出登录</string>
    <string name="main_left_login_user">登录/注册</string>
    <string name="main_left_order">我的订购单</string>
    <string name="main_left_feed">意见反馈</string>
    <string name="main_left_updata">检测更新</string>
    <string name="main_left_clear_cache">清除缓存</string>
    <string name="main_left_tel">一键客服</string>
    <string name="main_left_commentjkd">给点评价呗</string>
    <string name="main_left_about">关于酒快到</string>
    <string name="main_left_setting">设置</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="clear_all">清空全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="hint">提示:</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="app_menu_cancellation">确定注销程序吗？</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="phone_tip">点此与店家取得联系</string>
    <string name="store_detail">店铺详情</string>
    <string name="buy_now">马上购买</string>
    <string name="serach">搜索</string>
    <string name="flag_money">¥</string>
    <string name="good_detail_describe">商品描述</string>
    <string name="store_detail_describe">最新\n评价</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="advise">给点建议呗</string>
    <string name="comment">评价一下嘛</string>
    <string name="about_jkd">关于酒快到</string>
    <string name="clear_photo">清除图片缓存</string>
    <string name="update_app">检测更新</string>
    <string name="custservicephone">400-616-9999</string>
    <string name="callphone">一键客服</string>
    <string name="companyname">北京酒快到网络科技有限公司</string>
    <string name="desc_jkd">酒快到是酒仙网旗下的快捷购酒服务平台，酒快到，9分钟送到是我们的服务目标，公司整合全国近100万家线下名酒旗下店，专卖店，连锁酒行等等优质资源，服务全国3亿酒友，同时，在互联网时代也为处于转型时期的传统渠道，代理商，终端店带来移动互联网的红利变革</string>
    <string name="current_progress_text">当前下载进度:</string>
    <string name="default_sprogress_text">0%</string>
    <string name="dial_phone_tip">    请在收货时与商家\n确认酒水真伪鉴别方法</string>
    <string name="jiuxian_login">酒仙网账号登录</string>
    <string name="user_login_hint">用户名/邮箱/手机号</string>
    <string name="user_password_hint">密码</string>
    <string name="login">登 录</string>
    <string name="register">立即注册</string>
    <string name="quick_login">无账号快速登录</string>
    <string name="register_title">注册</string>
    <string name="tip">提示：</string>
    <string name="tip_content">酒快到是酒仙网投资设立的全资子公司，您可以使用酒仙网账号登录。</string>
    <string name="phone_hint_text">手机号</string>
    <string name="pwd_hint_text">密码（6-24位）</string>
    <string name="authCode_hint_text">验证码</string>
    <string name="authCode_button_text">获取验证码</string>
    <string name="authCode_login_text">验证并登录</string>
    <string name="tv_timer_tip">为了时刻掌握订单动向，方便送货员能及时联系！请务必使用手机登录！</string>
    <string name="title_activity_user_order">UserOrderActivity</string>
    <string name="company_name">北京酒快到网络科技有限公司</string>
    <string name="string_about_us">   酒快到是酒仙网旗下的快捷购酒平台。酒快到移动客户端致力于满足消费者即时用酒需求，酒快到9分钟送到，是我们的服务目标。\n\n   平台整合全国近100万家线下名酒旗舰店、专卖店连锁酒行等优质资源。服务全国3亿酒友，帮助酒友快速定位方圆5公里的销售终端，酒快到为全国范围的酒类零售商户提供精准营销的新渠道。\n\n   在互联网时代为处于转型时机的传统渠道、代理商、终端店带来移动互联网的变革红利。\n</string>
    <string name="order_list_item_orderNumb">订购编号:</string>
    <string name="order_list_item_orderTime">订购时间:</string>
    <string name="order_list_item_orderStore">购买商铺:</string>
    <string name="order_list_item_orderTimer">配送计时:</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_pause_notification_prefix">暂停:</string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="umeng_common_icon">icon</string>
    <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_update_at">更新于</string>
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_title">用户反馈</string>
    <string name="umeng_fb_contact_title">填写联系信息</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_reply_content_hint">我想说...</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_reply_content_default">你好， 我是产品经理，欢迎您反馈使用产品的感受和建议</string>
    <string name="umeng_fb_reply_date_default">2013年3月12日 13:24:00</string>
    <string name="umeng_fb_notification_ticker_text">有新的回复</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">新回复: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自开发者的 %d 条回复。</string>
    <string name="umeng_fb_powered_by">Powered by</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="update_ok">确认</string>
    <string name="dialog_no">取消</string>
    <string name="umeng_xp_size">大小</string>
    <string name="umeng_xp_action_open">打开</string>
    <string name="umeng_xp_action_browse">浏览</string>
    <string name="umeng_xp_action_download">下载</string>
    <string name="umeng_xp_action_callphone" />
    <string name="umeng_xp_more">更多精彩推荐</string>
    <string name="umeng_xp_back_to_top">回到顶部</string>
    <string name="umeng_xp_back">返回</string>
    <string name="umeng_xp_dowloadOrNot">是否下载推荐应用？</string>
    <string name="umeng_xp_title_info">精彩推荐</string>
    <string name="umeng_xp_dowload_dialog_dinfo">马上下载</string>
    <string name="umeng_xp_dowload_dialog_cinfo">马上拨打</string>
    <string name="umeng_xp_failed_loading">加载失败...</string>
    <string name="umeng_xp_no_browser_tips">请先安装浏览器..</string>
    <string name="umeng_xp_tip_download_pre">开始下载</string>
    <string name="umeng_xp_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_xp_info_banner_deprecated">当前SDK版本不支持Banner样式,请联系客服.</string>
</resources>