<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title" android:layout_alignParentTop="true" layout="\@layout/common_title" />
    <ScrollView android:scrollbars="vertical" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/common_title">
        <LinearLayout android:orientation="vertical" android:id="@id/setting_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/update_app" android:clickable="true" style="\@style/setting_layout">
                <TextView android:layout_width="wrap_content" android:text="@string/update_app" android:layout_weight="1.0" style="\@style/setting_tv" />
                <TextView android:id="@id/app_version" android:layout_width="wrap_content" android:text="版本1.0" style="\@style/setting_tv" />
            </LinearLayout>
            <View style="\@style/text_divider_normal" />
            <LinearLayout android:id="@id/comment_advise" android:layout_height="wrap_content" style="\@style/setting_layout">
                <LinearLayout android:orientation="horizontal" android:id="@id/aboutjkd" android:visibility="gone" android:clickable="true" android:layout_marginTop="0.0dip" style="\@style/setting_layout">
                    <TextView android:text="@string/about_jkd" style="\@style/setting_tv" />
                </LinearLayout>
                <View style="\@style/text_divider_normal" />
                <LinearLayout android:orientation="horizontal" android:id="@id/clearphone" android:clickable="true" android:layout_marginTop="0.0dip" style="\@style/setting_layout">
                    <TextView android:layout_width="0.0dip" android:text="@string/clear_photo" android:layout_weight="1.0" style="\@style/setting_tv" />
                    <TextView android:id="@id/cachephoto" android:layout_width="wrap_content" android:text="" style="\@style/setting_tv" />
                </LinearLayout>
                <View style="\@style/text_divider_normal" />
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" style="\@style/setting_layout">
                <View style="\@style/text_divider_normal" />
                <LinearLayout android:orientation="horizontal" android:id="@id/advisejkd" android:visibility="gone" android:clickable="true" android:layout_marginTop="0.0dip" style="\@style/setting_layout">
                    <TextView android:text="@string/advise" style="\@style/setting_tv" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/commentjkd" android:clickable="true" android:layout_marginTop="0.0dip" style="\@style/setting_layout">
                    <TextView android:text="@string/comment" style="\@style/setting_tv" />
                </LinearLayout>
                <View style="\@style/text_divider_normal" />
            </LinearLayout>
            <TextView android:textSize="20.0sp" android:textColor="@color/red" android:layout_gravity="center" android:id="@id/companyphone" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/custservicephone" />
            <TextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_gravity="center" android:id="@id/quickcall" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/callphone" />
        </LinearLayout>
    </ScrollView>
    <TextView android:textSize="20.0sp" android:textColor="@color/gray" android:id="@id/companyname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/companyname" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>