<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/listitem_black" android:gravity="center" android:id="@id/foot_loadFull" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/load_full" />
    <TextView android:textColor="@color/listitem_black" android:gravity="center" android:id="@id/foot_noData" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_data" />
    <TextView android:textColor="@color/listitem_black" android:gravity="center" android:id="@id/foot_more" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more" />
    <ProgressBar android:id="@id/foot_loading" style="\@style/loading_small" />
</LinearLayout>