<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/content_layout_title" android:background="@drawable/bg_title" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:id="@id/titile_back_imageview" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/button_title_back" android:scaleType="centerInside" android:contentDescription="@string/description" />
        <TextView android:textSize="@dimen/top_middle" android:textColor="@color/bai" android:id="@id/titile_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="用户登录" android:layout_centerInParent="true" />
    </RelativeLayout>
    <ScrollView android:id="@id/srcollView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/content_layout_title">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/userLogin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <TextView android:textSize="17.0sp" android:textColor="#ff4f4f4f" android:id="@id/jiuxian_login_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/jiuxian_login" />
                <EditText android:textSize="17.0sp" android:textColor="@color/editor_text_color" android:textColorHint="@color/hint_color" android:id="@id/user_name_editText" android:background="@color/bai" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="54.0dip" android:layout_marginTop="10.0dip" android:hint="@string/user_login_hint" android:singleLine="true" android:drawableLeft="@drawable/ic_main_user" android:drawablePadding="15.0dip" android:layout_below="@id/jiuxian_login_textView" android:layout_centerVertical="true" />
            </RelativeLayout>
            <View android:id="@id/line_view" android:background="@color/text_gray_color_e3" android:layout_width="fill_parent" android:layout_height="0.70000005dip" android:layout_marginLeft="15.0dip" android:layout_below="@id/userLogin" />
            <FrameLayout android:gravity="center_vertical" android:id="@id/password_layout" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="54.0dip" android:layout_below="@id/line_view" android:layout_centerInParent="true">
                <EditText android:textSize="17.0sp" android:textColor="@color/editor_text_color" android:textColorHint="@color/hint_color" android:id="@id/password_editText" android:background="@color/bai" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="54.0dip" android:hint="@string/user_password_hint" android:singleLine="true" android:drawableLeft="@drawable/ic_pwd" android:drawablePadding="15.0dip" android:inputType="textPassword" />
            </FrameLayout>
            <Button android:textSize="17.0sp" android:textColor="#ffffffff" android:id="@id/loginOn_Button" android:background="@drawable/select_button_dial" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:text="@string/login" android:layout_below="@id/password_layout" />
            <RelativeLayout android:id="@id/quick_login_relayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:layout_below="@id/loginOn_Button">
                <TextView android:textSize="15.0sp" android:textColor="#ff0099ff" android:id="@id/register_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register" android:layout_alignParentLeft="true" android:layout_centerInParent="true" />
                <TextView android:textSize="15.0sp" android:textColor="#ff0099ff" android:id="@id/quick_login_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quick_login" android:layout_alignParentRight="true" android:layout_centerInParent="true" />
            </RelativeLayout>
            <ImageView android:id="@id/image_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:src="@drawable/ic_login_line" android:layout_below="@id/quick_login_relayout" />
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="35.0dip" android:layout_below="@id/image_line">
                <TextView android:textSize="17.0sp" android:textColor="#ff333333" android:id="@id/tip_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip" />
                <TextView android:textSize="17.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_content" android:layout_toRightOf="@id/tip_text" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>