<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/umeng_fb_conversation_header" android:background="@drawable/bg_title" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_alignParentTop="true">
        <Button android:textColor="#ffffffff" android:id="@id/umeng_fb_back" android:background="@drawable/umeng_fb_btn_bg_selector" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/umeng_fb_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/top_middle" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/umeng_fb_title" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/umeng_fb_conversation_contact_entry" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_below="@id/umeng_fb_conversation_header">
        <ImageView android:layout_width="20.0dip" android:layout_height="15.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/img_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@null" />
        <TextView android:textSize="18.0sp" android:textColor="@color/text_black_color_46" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/umeng_fb_contact_info" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/line1" android:layout_below="@id/umeng_fb_conversation_contact_entry" style="\@style/text_divider_normal" />
    <RelativeLayout android:id="@id/umeng_fb_conversation_list_wrapper" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/line1">
        <ListView android:id="@id/umeng_fb_reply_list" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:listSelector="@android:color/transparent" android:transcriptMode="alwaysScroll" android:cacheColorHint="@android:color/transparent" android:divider="@null" android:choiceMode="none" android:layout_above="@id/umeng_fb_reply_content_wrapper" android:layout_alignParentTop="true" android:headerDividersEnabled="false" />
        <RelativeLayout android:id="@id/umeng_fb_reply_content_wrapper" android:background="#ffeeeeee" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true">
            <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/umeng_fb_send" android:background="@drawable/select_button_dial" android:paddingLeft="12.0dip" android:paddingTop="5.0dip" android:paddingRight="12.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/umeng_fb_send" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <EditText android:textSize="16.0sp" android:textColor="@color/text_black_color_59" android:id="@id/umeng_fb_reply_content" android:background="@drawable/img_et_advisejkd" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:hint="@string/umeng_fb_reply_content_hint" android:layout_toLeftOf="@id/umeng_fb_send" android:layout_alignTop="@id/umeng_fb_send" android:layout_alignBottom="@id/umeng_fb_send" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>